fix: update dark mode config, style buttons, replace aspect-video for old browser compatibility

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -67,3 +67,9 @@
 	);
 	animation: shimmer 1.5s infinite;
 }
+
+/* For old browser */
+button {
+	background-color: transparent;
+	-webkit-appearance: none;
+}
